appId: ${APP_ID}
---

- runFlow: ../shared/navigate-to-settings.flow.yaml

- scrollUntilVisible:
    element:
      id: 'SettingsPage.ManageCategoriesCard'
    direction: DOWN
    speed: 20
- tapOn:
    id: 'SettingsPage.ManageCategoriesCard'
- extendedWaitUntil:
    visible: 'Categories'

- tapOn: 'E2E Category, Swipe left'
- waitForAnimationToEnd

- tapOn:
    id: 'CategoryForm.Input'
- eraseText: 50
- inputText: 'E2E Edited Category'
- hideKeyboard

- tapOn:
    id: 'CategoryForm.Submit'

- extendedWaitUntil:
    visible: 'E2E Edited Category, Swipe left'
    timeout: 10000
