appId: com.vitalyiegorov.budgie
---

- clearState
- launchApp

- runFlow:
    when:
      visible: 'http://localhost:8081'
    commands:
      - tapOn: 'http://localhost:8081'

- runFlow:
    when:
      visible: 'Close'
    commands:
      - tapOn: 'Close'

- waitForAnimationToEnd

- tapOn:
    text: 'Continue'
    optional: true

- waitForAnimationToEnd

- runFlow:
    when:
      visible: 'TOOLS'
    commands:
      - tapOn:
          point: '90%,52%'

- extendedWaitUntil:
    visible:
      id: 'TabBar.Home'
    timeout: 15000
- tapOn:
    id: 'TabBar.Home'
- extendedWaitUntil:
    visible: 'TOTAL BALANCE'
- tapOn:
    id: 'ActionButton'
- extendedWaitUntil:
    visible:
      id: 'ActionItem.0'
- waitForAnimationToEnd
- tapOn:
    text: 'Account'
- extendedWaitUntil:
    visible: 'New Account'
- tapOn:
    id: 'CreateAccount.CASH'
- extendedWaitUntil:
    visible: 'Account Name & Icon'
- tapOn:
    text: 'e.g. Savings Account'
- inputText: Test Account
- tapOn:
    id: CreateAccount.Amount
- inputText: 100
- tapOn:
    text: 'Submit'
- assertVisible: Test Account, $100
- assertVisible: 'TOTAL BALANCE'
